crates/cli/tests/snapshots/cli__dry_run_lua_comment.snap
---
source: crates/remind-me-to-cli/tests/cli.rs
info:
  program: remind-me-to
  args:
    - "--color"
    - never
    - check
    - "--dry-run"
    - /tmp/.tmpfx1K0M/test.lua
  env:
    GH_TOKEN: ""
    GITHUB_TOKEN: ""
    NO_COLOR: "1"
    RUST_LOG: "off"
---
success: true
exit_code: 0
----- stdout -----
Found 1 reminder(s) (dry run, no conditions checked):

[DIR]/test.lua:1 lua
  issue_closed=github:e/f#3


----- stderr -----
